--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
       <title>MAFLEORYN ID STORE OFFICIAL</title>
+                  <script>
+
+            alert('Selamat Datang di MAFLEORYN ID STORE OFFICIAL silahkan dilihat terlebih dahulu jikalau anda menaksir harap disahkan terlebih dahulu sebelum dibungkus 😇');
+
+           </script>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
